[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/enemy/meteorBrown_tiny1.png" type="Texture" id=1]
[ext_resource path="res://scenes/rocks/Rock_small.gd" type="Script" id=2]
[ext_resource path="res://sound/sfx/enemy_explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/sfx/enemy_shoot.wav" type="AudioStream" id=4]

[node name="Rock_small" type="RigidBody2D"]
collision_layer = 2
collision_mask = 3
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -7, 0, -1, -8, 7, -4, 5, 7, -3, 7 )

[node name="Sound_Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0
pitch_scale = 1.1
max_distance = 300.0
attenuation = 0.164939
bus = "SFX"

[node name="Sound_Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
max_distance = 400.0
attenuation = 0.435275
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Rock_small_body_entered"]
